--- a/Life_EXP_Analysis.Rmd
+++ b/Life_EXP_Analysis.Rmd
@@ -15,4 +15,9 @@ Here we will reproduce the famous plot from Oeppen and Vaupel (2002).
 
 ## Analysis
 
+Here we begin the analysis
+
+```{r}
+
+```
 
