Loaded in gapminderunfiltered, grouped by year and filtered max life expectancies

--- a/Life_EXP_Analysis.Rmd
+++ b/Life_EXP_Analysis.Rmd
@@ -18,6 +18,10 @@ Here we will reproduce the famous plot from Oeppen and Vaupel (2002).
 Here we begin the analysis
 
 ```{r}
+lifeexp<- gapminder::gapminder_unfiltered
 
+lifeexp%>%
+  group_by(year)%>%
+  filter(lifeExp == max(lifeExp))
 ```
 
