Arranged the data by year

--- a/Life_EXP_Analysis.Rmd
+++ b/Life_EXP_Analysis.Rmd
@@ -23,6 +23,7 @@ lifeexp<- gapminder::gapminder_unfiltered
 
 lifeexp%>%
   group_by(year)%>%
-  filter(lifeExp == max(lifeExp))->LifeExpAnalysis
+  filter(lifeExp == max(lifeExp))%>%
+  arrange(year)->LifeExpAnalysis
 ```
 
